# lagrange-ng

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  makefile  meson.build
.circleci/: config.yml
.github/workflows/: cmake-multi-platform.yml  create-release.yml
.release-opts/: mkl-threaded
cmake/: FindMKL.cmake
example/: example.conf  example.fasta  example.nwk  example.phy
lib/: CMakeLists.txt
src/: AdjustmentMatrix.cpp  AdjustmentMatrix.hpp  Alignment.cpp  Alignment.h  Alignment.hpp  AncSplit.cpp  AncSplit.h  AncSplit.hpp  Arnoldi.cpp  Arnoldi.h  Arnoldi.hpp  BayesianBioGeo.cpp  BayesianBioGeo.h  BayesianBioGeoAllDispersal.cpp  BayesianBioGeoAllDispersal.h  BayesianBioGeoStMapper.cpp  BayesianBioGeoStMapper.h  BioGeoTree.cpp  BioGeoTree.h  BioGeoTreeTools.cpp  BioGeoTreeTools.h  BranchSegment.cpp  BranchSegment.h  CMakeLists.txt  CSV.cpp  CSV.hpp  Checkpoint.hpp  Common.cpp  Common.h  Common.hpp  ConfigFile.cpp  ConfigFile.h  ConfigFile.hpp  ConfigFileLexer.cpp  ConfigFileLexer.hpp  ConfigFileParser.cpp  ConfigFileParser.hpp  Context.cpp  Context.h  Context.hpp  (+70 more)
subprojects/: nlopt.wrap
subprojects/nlopt-wrap/: meson.build
tests/: CMakeLists.txt
tests/conda/: conda-test.conf  conda-test.nwk  conda-test.phy
tests/data/: pathological_trees  random_test_trees  sloths.tre  test1.conf  test2.conf
tests/src/: adjustment_matrix.cpp  config.h.in  configfile.cpp  context.cpp  csv.cpp  environment.hpp  main.cpp  operation.cpp  thread_state.cpp  tree.cpp  tree_reader.cpp  utils.cpp  workspace.cpp
tools/: build_flamegraphs.sh
tools/profiler/: .gitignore
tools/profiler/src/: benchmark.py  dataset.py  experiment.py  flamegraph.py  main.py  program.py  result.py  tester.py  util.py
tools/tester/src/: lagrange.py  main.py  tester.py
